--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<link rel="manifest" href="{% static "core/manifest.json" %}">
 </head>
 <body>
 
